# AOC-TUI

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  ui.rs
src/app/: signals.rs  terminal.rs
src/data/: client.rs  event.rs
src/ui/: config.rs  events.rs  states.rs  ui.rs
