[package]
name = "aoc_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
